--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -15,7 +15,8 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.inputmethod.latin.tests">
+    package="com.android.inputmethod.latin.tests"
+    android:versionCode="28">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
