Let Android Studio use 'shared' cert to build APK
make build uses 'shared' cert in build/make/target/product/security/.
If LatinIME APK built with AndroidStudio doesn't use the same signing
cert, then you cannot install the APK into AOSP image, which is not
convenient.

With this CL, AndroidStudio build also uses the same signing cert.

Note that shared.keystore was built as follows.

 $ openssl pkcs8 -inform DER -nocrypt                      \
   -in build/make/target/product/security/shared.pk8       \
   -out shared.pem
 $ openssl pkcs12 -export                                  \
   -in build/make/target/product/security/shared.x509.pem  \
   -inkey shared.pem -out shared.p12                       \
   -password pass:android -name AndroidDebugKey
 $ keytool -importkeystore -deststorepass android          \
   -destkeystore shared.keystore -srckeystore shared.p12   \
   -srcstoretype PKCS12 -srcstorepass android

Fix: 110741422
Test: made sure that the APK built with Android Studio can be
      installed to an AOSP build
Change-Id: I471a87e190b15ff02bb06849e4660ed7898897a5

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,14 @@ android {
         testApplicationId 'com.android.inputmethod.latin.tests'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = false
+
+        signingConfig signingConfigs.debug
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file("java/shared.keystore")
+        }
     }
 
     buildTypes {
