--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,6 @@ android {
         testApplicationId 'org.futo.inputmethod.latin.tests'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = false
-
-        signingConfig signingConfigs.debug
     }
 
     signingConfigs {
@@ -43,12 +41,29 @@ android {
         }
     }
 
+    final def keystorePropertiesFile = rootProject.file("keystore.properties")
+    def releaseSigning = signingConfigs.debug
+    if (keystorePropertiesFile.exists()) {
+        final def keystoreProperties = new Properties()
+        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+        releaseSigning = signingConfigs.create("release") {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile rootProject.file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+    } else {
+    	project.logger.lifecycle('keystore.properties not found, APK may not be signed')
+    }
+
     buildTypes {
         debug {
             minifyEnabled false
+            signingConfig signingConfigs.debug
         }
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard.flags'
+            signingConfig releaseSigning
         }
     }
 
