Rename LatinIME to LatinIMELegacy and wrap it in a new Compose class

--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -58,7 +58,7 @@
          android:directBootAware="true">
 
         <!-- Services -->
-        <service android:name="LatinIME"
+        <service android:name=".LatinIME"
              android:label="@string/english_ime_name"
              android:permission="android.permission.BIND_INPUT_METHOD"
              android:exported="true">
