--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -56,7 +56,8 @@
          android:supportsRtl="true"
          android:allowBackup="true"
          android:defaultToDeviceProtectedStorage="true"
-         android:directBootAware="true">
+         android:directBootAware="true"
+         android:name=".CrashLoggingApplication">
 
         <!-- Services -->
         <service android:name=".LatinIME"
