Creatre initial updated settings menu

--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -87,12 +87,12 @@
         </service>
 
         <!-- Activities -->
-        <activity android:name=".setup.SetupActivity"
-             android:theme="@style/platformActivityTheme"
+        <activity android:name=".uix.settings.SettingsActivity"
+             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
              android:label="@string/english_ime_name"
              android:icon="@drawable/ic_launcher_keyboard"
              android:launchMode="singleTask"
-             android:noHistory="true"
+             android:noHistory="false"
              android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -104,25 +104,6 @@
              android:theme="@android:style/Theme.Translucent.NoTitleBar"
              android:exported="false"
              android:taskAffinity="">
-        </activity>
-
-        <activity android:name=".setup.SetupWizardActivity"
-             android:theme="@style/platformActivityTheme"
-             android:label="@string/english_ime_name"
-             android:clearTaskOnLaunch="true"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".settings.SettingsActivity"
-             android:theme="@style/platformSettingsTheme"
-             android:label="@string/english_ime_settings"
-             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-            </intent-filter>
         </activity>
 
         <activity android:name=".spellcheck.SpellCheckerSettingsActivity"
