--- a/build.gradle
+++ b/build.gradle
@@ -166,6 +166,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
 
+    def work_version = "2.8.1"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.work:work-runtime:$work_version"
+
     implementation project(":voiceinput-shared")
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
