--- a/build.gradle
+++ b/build.gradle
@@ -165,6 +165,7 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.5.1'
 
     def work_version = "2.8.1"
     implementation "androidx.work:work-runtime-ktx:$work_version"
