--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,34 @@ plugins {
     id 'com.android.library' version '8.2.0' apply false
 }
 
+def getVersionCode = { ->
+    try {
+        def stdout = new ByteArrayOutputStream()
+        exec {
+            commandLine 'git', 'rev-list', '--first-parent', '--count', 'master'
+            standardOutput = stdout
+        }
+        return Integer.parseInt(stdout.toString().trim())
+    } catch (ignored) {
+        project.logger.lifecycle("Failed to get rev-list count from git!")
+        return -1;
+    }
+}
+
+def getVersionName = { ->
+    try {
+        def stdout = new ByteArrayOutputStream()
+        exec {
+            commandLine 'git', 'describe', '--tags', '--dirty'
+            standardOutput = stdout
+        }
+        return stdout.toString().trim()
+    } catch (ignored) {
+        project.logger.lifecycle("Failed to get version name tag from git!")
+        return "0.0.0";
+    }
+}
+
 android {
     namespace 'org.futo.inputmethod.latin'
 
@@ -22,8 +50,8 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 34
-        versionName "0.1.12"
-        versionCode 43
+        versionName getVersionName()
+        versionCode getVersionCode()
 
         applicationId 'org.futo.inputmethod.latin'
         testApplicationId 'org.futo.inputmethod.latin.tests'
@@ -189,3 +217,6 @@ dependencies {
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'androidx.annotation:annotation:1.0.0'
 }
+
+project.logger.lifecycle("versionCode = ${android.defaultConfig.versionCode}")
+project.logger.lifecycle("versionName = ${android.defaultConfig.versionName}")
