Use clone and depth 0 for CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ default:
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
   GIT_SUBMODULE_FORCE_HTTPS: "true"
+  GIT_STRATEGY: clone
+  GIT_DEPTH: 0
 
 stages:          # List of stages for jobs, and their order of execution
   - build
