--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ build:
     - docker
   script:
     - export VERSION_NAME=`git describe --tags --dirty`
-    - export VERSION_CODE=`git rev-list --first-parent --count master`
+    - export VERSION_CODE=`git rev-list --first-parent --count HEAD`
+    - echo $VERSION_CODE $VERSION_NAME
     - ./setUpPropertiesCI.sh
     - gradle assembleRelease -s
     - mv build/outputs/apk/release/latinime-release.apk ./keyboard-$VERSION_NAME.apk
