--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ android {
             dimension "buildType"
             buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "false"
             buildConfigField "boolean", "UPDATE_CHECKING", "true"
+            getIsDefault().set(true)
         }
         playstore {
             dimension "buildType"
@@ -205,9 +206,9 @@ dependencies {
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'androidx.autofill:autofill:1.1.0'
 
-    implementation 'ch.acra:acra-http:5.11.1' // TODO: Remove upon release
-    implementation 'ch.acra:acra-mail:5.11.1'
-    implementation 'ch.acra:acra-dialog:5.11.1'
+    stableImplementation 'ch.acra:acra-http:5.11.1' // TODO: Remove upon release
+    stableImplementation 'ch.acra:acra-mail:5.11.1'
+    stableImplementation 'ch.acra:acra-dialog:5.11.1'
 
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
